# dstu

./: .gitignore  README.md
pzs/WebDev/php/: base.php  db.php  Що таке REST API.docx
pzs/WebDev/react 1/: package-lock.json  package.json
pzs/WebDev/react2/: package-lock.json  package.json
pzs/discrete/: discrete1.sln
pzs/discrete/Debug/: discrete.ilk
pzs/discrete/discrete/: ReadMe.txt  discrete.cpp  discrete.vcxproj  discrete.vcxproj.filters  stdafx.cpp
pzs/discrete/pr2/: discrete2.cpp
pzs/internet_programming/: background.md  info.md  selector-priority.md  selectors.md
pzs/internet_programming/final task/: README.md
pzs/internet_programming/l1/: README.md
pzs/internet_programming/l2/: README.md
pzs/internet_programming/l3/: README.md
pzs/internet_programming/l4/: README.md
pzs/internet_programming/l5/: README.md
pzs/internet_programming/l6/: README.md  index.html  style.css
pzs/internet_programming/pr1/: index.html  style.css
pzs/internet_programming/pr2/: index.html  style.css
pzs/internet_programming/practice1/: index.html
pzs/internet_programming/practice2/: index.html  style.css
pzs/internet_programming/practice3/: index.html  style.css  style.css.map  style.scss
pzs/internet_programming/practice4/: index.html  style.css
pzs/internet_programming/practice5/: style.css  style.css.map  style.scss
pzs/internet_programming/practice6/: index.html  (+3 more)
pzs/oop/semester2/l1/001/: CMakeLists.txt  main.cpp  sportsman.cpp  sportsman.h
pzs/software_engineering/: qt_practice.md
settings-vscode-github/: settings-vscode-github.md
(+253 files in other folders)
